# taningia

./: .gitignore  .travis.yml  COPYING.hashtable  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  jarvis.pc.in  taningia.pc.in
bindings/: Makefile.am
bindings/defs/: Makefile.am  scanner.py
bindings/python/: Makefile  Makefile.am  listconverter.c  listconverter.h  overrides.py  scanner.py  writer.py
examples/: Makefile.am  atom-example.c  atom.c  iri-example.c  iri.c  list-example.c  list.c  log-system.c  log.c  srv.c  using-filters.c  xmpp-client-2.c  xmpp-client.c
include/: Makefile.am
include/jarvis/: Makefile.am  atom.h  filter.h  jarvis.h  log.h  pubsub.h  xmpp.h
include/taningia/: Makefile.am  atom.h  buf.h  common.h  error.h  filter.h  global.h  iri.h  list.h  log.h  mem.h  object.h  pubsub.h  srv.h  taningia.h  xmpp.h
src/: Makefile.am  atom.c  buf.c  error.c  filter.c  global.c  hashtable-utils.c  hashtable-utils.h  hashtable.c  hashtable.h  iri.c  list.c  log.c  object.c  pubsub.c  srv.c  xmpp.c
tests/: Makefile.am  check.c  check_buf.c  check_errors.c  check_iri.c  check_list.c
