noinst_PROGRAMS = xmpp-client log-system iri-example \
	atom-example list-example

xmpp_client_SOURCES = xmpp-client.c
xmpp_client_CFLAGS = -I$(top_srcdir)/include
xmpp_client_LDFLAGS = $(top_builddir)/src/libtaningia.la

log_system_SOURCES = log-system.c
log_system_CFLAGS = -I$(top_srcdir)/include
log_system_LDFLAGS = $(top_builddir)/src/libtaningia.la

iri_example_SOURCES = iri-example.c
iri_example_CFLAGS = -I$(top_srcdir)/include
iri_example_LDFLAGS = $(top_builddir)/src/libtaningia.la

atom_example_SOURCES = atom-example.c
atom_example_CFLAGS = -I$(top_srcdir)/include
atom_example_LDFLAGS = $(top_builddir)/src/libtaningia.la

list_example_SOURCES = list-example.c
list_example_CFLAGS = -I$(top_srcdir)/include
list_example_LDFLAGS = $(top_builddir)/src/libtaningia.la
